# django-blog

./: .flake8  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: django.yml
myblog/blog/: admin.py  models.py  tests.py  views.py
myblog/blog/management/commands/: create_modified_files.py
myblog/blog/migrations/: 0001_initial.py  0002_alter_blog_date.py  0003_userimages.py
myblog/blog/templates/blog/: home.html
myblog/blog/tests/: test_selenium.py  test_simple.py
myblog/locale/de/LC_MESSAGES/: django.po
myblog/myblog/: settings.py  urls.py
