[metadata]
name = django-blog-johanneswilm
version = 0.0.1
author = Johannes Wilm
author_email = johanneswilm+1@gmail.com
description = A simple django blog
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johanneswilm/django-blog
project_urls =
    Bug Tracker = https://github.com/johanneswilm/django-blog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Framework :: Django :: 3.2
    Operating System :: OS Independent

[options]
package_dir =
    = myblog
packages = find:
python_requires = >=3.6
install_requires =
    Django==3.2.8
include_package_data = True

[options.packages.find]
where = myblog
